# lxqt-desktop

./: CMakeLists.txt  LICENSE  README.md
config/: CMakeLists.txt  basicsettings.cpp  basicsettings.h  desktopconfigwindow.cpp  desktopconfigwindow.h  lxqt-config-desktop.desktop.in  main.cpp  menuconfig.cpp  menuconfig.h  wmnativeconfig.cpp  wmnativeconfig.h
desktop-lxqt/: CMakeLists.txt  backgroundprovider.cpp  desktopbackgrounddialog.h  desktopscene.cpp  desktopscene.h  desktopwidgetplugin.cpp  desktopwidgetplugin.h  lxqtworkspace.cpp  workspacemanager.cpp  workspacemanager.h
desktop-lxqt/plugin-analogclock/: CMakeLists.txt  clock.cpp  clock.h
desktop-lxqt/plugin-helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.h
desktop-lxqt/plugin-iconview/: CMakeLists.txt  iconscene.cpp  iconview.cpp  iconview.h
desktop-lxqt/plugin-notepad/: CMakeLists.txt  notepad.cpp  notepad.h
desktop-wm_native/: CMakeLists.txt  razordeskicon.cpp  razordeskman.cpp  razordeskman.h
resources/: desktop.conf
src/: desktopplugin.h  main.cpp  razordesktopapplication.cpp  razordesktopapplication.h
